<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/about_background"
    android:orientation="vertical" >

    <!-- 标题 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/title_bar"
            android:gravity="center_horizontal|center_vertical" >

            <TextView
                style="@style/title_barText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/backBtn"
                android:layout_width="65dp"
                android:layout_height="33dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/ic_bar_back"
                android:text="@string/bar_back"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@drawable/company_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/company_name"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/call"
                style="@style/qyTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/about_top_bg"
                android:text="@string/tel_call" />

            <Button
                android:id="@+id/sendEmail"
                style="@style/qyTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/about_bottom_bg"
                android:text="@string/pro2me" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp" >

            <TextView
                style="@style/qyinfo_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/banquan" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>